# researchRalph

./: .agent-prompt.txt  .gitignore  .run-agent.sh  API_MIGRATION.md  BEHAVIORAL_IDS_LANDSCAPE.md  CHECKPOINT.md  CLAUDE.md  COMMANDER.md  COMMANDER_V1_VS_V2.md  EXPERIMENT_ANALYSIS.md  FUTURE_WORK.md  GETTING-STARTED.md  NIRENBERG_BLOG.md  README.md  ROUND_2_BREAKTHROUGH_SUMMARY.md  TRUSTLOOP.md  TRUSTLOOP_REPORT_DESIGN.md  WEEKEND.md  baseline.py  benchmark-results.tsv  benchmark.sh  bootstrap.sh  commander_v2.py  commander_v2.sh  deploy-lambda.sh  deploy-nigel.sh  final_summary.md  hypothesis.json  next_ideas.md  nirenberg-1d-chaos-haiku-h1-control  progress.md  progress.txt  prompt.md  prompt_remote.md  pyproject.toml  quickstart.sh  refactorProposal.md  research.sh  research_remote.sh  rrma-bridge.sh  (+11 more)
.rrma/: SKILL.md  mcp.json
.trustloop/: CLAUDE.md  SKILL.md  mcp.json  settings.json
bootstrap/: DATASET_CARD.md  audit_dataset.py  baseline_eval.py  build_dataset.py  build_dataset.sh  dedup_dataset.py  eval_signal.py  finetune.py  generate.py  generate_opus_traces.py  mine_mathlib.py  mine_proofs.py  pipeline.sh  score_attempts.py  validate_signal.py  verify_filter.py
client/: pyproject.toml
client/researchralph/: __init__.py
context/: baseline.md  deepmind_paper.md  search_space.md
core/: bridge.sh  collect.sh  conductor.sh  launch.sh  monitor.sh  notebook.sh  operator.sh  run-single.sh  stop.sh  verifier.sh  watchdog.sh
data/: audit_results.jsonl  minif2f_statements.json  rrma_lean_combined.jsonl  (+4 more)
hub/: README.md  pyproject.toml  server.py
v4/: env.sh  (+20 more)
(+5429 files in other folders)
