[project]
name = "researchralph-hub"
version = "0.3.0"
description = "Unified event stream — the blackboard protocol over HTTP"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
    "starlette>=0.38.0",
]

[project.scripts]
hub = "server:main"
